--- a/opject1/src/Footer.css
+++ b/opject1/src/Footer.css
@@ -1,13 +1,13 @@
 .footer {
-    height: 6vh;
+    height: 10vh;
     background-color: #6d9bad;
     color: white;
     text-align: center;
-    padding: 2vh;
-    font-size: 28px;
+   padding-top: 10px;
+    font-size: 20px;
     font-weight: bold;
 }
-a {
+.footer a {
     text-decoration: none;
     color: #ca4752;
     list-style: none;
