--- a/opject1/src/Section4.css
+++ b/opject1/src/Section4.css
@@ -1,8 +1,8 @@
 .Section4 {
-    height: 44vh;
+    height: 50vh;
     text-align: center;
     background-color: white;
-    margin-top: 7vh;
+    /* margin-top: 4vh; */
 }
 h2 {
     padding-top: 8vh;
@@ -20,15 +20,15 @@ h2 {
 
  h4 {
     color: black;
-    font-size: 2vh;
+    font-size: 3.5vh;
 }
 .boxs-3 p {
     color: gray;
-    font-size: 1.5vh;
+    font-size: 2.5vh;
 }
 i {
     color: #9fdef7;
-    font-size: 6vh;
+    font-size: 8vh;
     padding-bottom: 2vh;
 }
 .b-two i {
